tree-sitter-glyph/grammar.js
    source_file: ($) => repeat($._top_level_declaration),

    _top_level_declaration: ($) =>
      choice(
        $.import_statement,
        $.skill_declaration,
        $.block_declaration,
        $.export_block_declaration,
        $.const_declaration,
        $.generated_const_declaration,
        $.generated_block_declaration,
      ),

    // ── imports ────────────────────────────────────────────────────
    skill_declaration: ($) =>
      seq(
        "skill",
        field("name", $.identifier),
        $.parameter_list,
        optional($.return_type),
        $._newline,
        $._indent,
        $.declaration_body,
        $._dedent,
      ),

    // ── block declaration (private) ────────────────────────────────
    // Plain `block` uses the permissive `declaration_body`, which
    // accepts the single-string shorthand naturally: a body with
    // exactly one bare `inline_instruction_stmt` IS the shorthand.
    _shorthand_body: ($) => seq($.inline_instruction, $._newline),

    // ── value bindings ─────────────────────────────────────────────
    const_declaration: ($) =>
      seq(
        optional("export"),
        "const",
        field("name", $.identifier),
        "=",
        field("value", $._const_rhs),
        $._newline,
      ),

    // Per #81: const RHS is a literal — string, block string, integer,
    // float, or boolean. Bare-name and qualified-name RHS are out of
    // scope (see crates/glyph-core/src/parse.rs `parse_const_literal_rhs`).
    _const_rhs: ($) => choice(
      $.string_literal,
      $.block_string,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
    ),

    generated_block_declaration: ($) =>
      seq(
        "generated",
        "block",
        field("name", $.identifier),
        $.parameter_list,
        $._newline,
        $._indent,
        $._shorthand_body,
        $._dedent,
      ),

    // ── parameters ─────────────────────────────────────────────────
    parameter_list: ($) =>
      seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional($.type_annotation),
        optional(seq("=", field("default", $._parameter_default))),
      ),

    type_annotation: ($) =>
      seq(":", field("type", $.type_identifier)),

    type_identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,

    _parameter_default: ($) =>
      choice(
        $.param_description_form,
        seq($.string_literal, $.param_description_form),
        seq($.block_string, $.param_description_form),
        $.string_literal,
        $.block_string,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.none_literal,
        $.qualified_name,
        $.identifier,
      ),

    // ── declaration body ───────────────────────────────────────────
    // Body-level constructs each consume their own trailing newline
    // (no wrapper rule, matching M1's flat shape).
    //
    // `_effects_stub` is a deliberate parse-stability concession.
    // `effects:` is out of the MVP language entirely (per the M2
    // brief and the canonical design doc), but three corpus files
    // still contain `effects:` lines pending a separate cleanup. If
    // the grammar treats those lines as plain syntax errors, the
    // recovery cascade can swallow adjacent lines (notably in
    // `repo_tools.glyph` where `effects:` appears as the first
    // body line, polluting the inline-instruction string parse and
    // breaking `tree-sitter highlight`). We therefore recognise the
    // line structurally (`effects:` followed by a comma-separated
    // identifier list) but emit no highlight captures and assign no
    // semantics. Once the corpus is cleaned, this rule and its
    // declaration-body / export-block-body entries can be removed.
    declaration_body: ($) =>
      repeat1(
        choice(
          $.description_section,
          $.context_section,
          $.constraints_section,
          $.flow_section,
          $._effects_stub,
          seq($.require_marker, $._newline),
          seq($.avoid_marker, $._newline),
          seq($.must_avoid_marker, $._newline),
          seq($.must_marker, $._newline),
          seq($.context_marker, $._newline),
          seq($.inline_instruction, $._newline),
        ),
      ),

    // Stub: parses `effects: a, b, c\n` as a single non-AST node.
    // Hidden via the leading underscore so it doesn't appear in
    // the parse tree.
    _effects_stub: ($) =>
      seq("effects", ":", commaSep1($.identifier), $._newline),

    // ── description section ────────────────────────────────────────
    description_section: ($) =>
      seq(
        "description",
        ":",
        choice(
          // short form: description: "text"
          seq(field("content", choice($.string_literal, $.block_string, $.identifier)), $._newline),
          // long form: description:\n    INDENT body DEDENT
          seq(
            $._newline,
            $._indent,
            field("content", choice($.string_literal, $.block_string, $.identifier)),
            $._newline,
            $._dedent,
          ),
        ),
      ),

    // ── context section ────────────────────────────────────────────
    context_section: ($) =>
      seq(
        "context",
        ":",
        choice(
          // short form: context: name-or-string
          seq(field("entry", $._context_entry), $._newline),
          // long form
          seq(
            $._newline,
            $._indent,
            repeat1(seq($._context_entry, $._newline)),
            $._dedent,
          ),
        ),
      ),

    _context_entry: ($) => choice($.string_literal, $.block_string, $.identifier),

    // ── constraints section ────────────────────────────────────────
    flow_section: ($) =>
      seq(
        "flow",
        ":",
        $._newline,
        $._indent,
        repeat1($.flow_statement),
        $._dedent,
      ),

    flow_statement: ($) =>
      choice(
        $.if_statement,
        seq($.return_statement, $._newline),
        seq($.variable_binding, $._newline),
        seq($.context_marker, $._newline),
        seq($.require_marker, $._newline),
        seq($.avoid_marker, $._newline),
        seq($.must_avoid_marker, $._newline),
        seq($.must_marker, $._newline),
        seq($._flow_expression, $._newline),
      ),

    // A flow expression is anything that can stand alone as a step:
    // a call, an applies-predicate, an inline string instruction, or
    // a bare identifier (resolved to a block during repair).
    _flow_expression: ($) =>
      choice(
        $.applies_expression,
        $.call_expression,
        $.inline_instruction,
        $.qualified_name,
        $.identifier,
      ),

    // ── markers ────────────────────────────────────────────────────
    // Markers are bare (no trailing newline) so they can be reused in
    // both body positions (wrapped by `*_marker_stmt`) and inside
    // `flow:` statements (wrapped by `flow_statement` with its own
    // newline).
    require_marker: ($) =>
      seq("require", $._marker_target),

    avoid_marker: ($) =>
      seq("avoid", $._marker_target),

    _marker_target: ($) =>
      choice($.string_literal, $.block_string, $.qualified_name, $.identifier),

    // ── inline instruction ─────────────────────────────────────────
    inline_instruction: ($) => choice($.string_literal, $.block_string),

    // ── control flow ───────────────────────────────────────────────
    param_description_form: ($) =>
      seq("<", choice($.string_literal, $.block_string), ">"),

    // ── variable binding ───────────────────────────────────────────
    call_expression: ($) =>
      prec(2,
        seq(
          field("function", choice($.qualified_name, $.identifier)),
          $.argument_list,
        ),
      ),

    argument_list: ($) =>
      seq("(", optional(commaSep1($.argument)), ")"),

    argument: ($) =>
      choice(
        // Named argument: `name = value`. Uses precedence so it wins
        // over the bare-expression case when an `=` follows the name.
        prec(1, seq(field("name", $.identifier), "=", field("value", $._argument_value))),
        $._argument_value,
      ),

    _argument_value: ($) =>
      choice(
        $.applies_expression,
        $.call_expression,
        $.qualified_name,
        $.identifier,
        $.string_literal,
        $.block_string,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.none_literal,
      ),

    // ── qualified name ─────────────────────────────────────────────
    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($.interpolation, $.string_content)),
        '"',
      ),

    string_content: (_) => token.immediate(prec(1, /[^"\\{]+/)),

    // Triple-quoted block string. Inside, `"""` ends, `{name}`
    // interpolates. Newlines inside `"""..."""` are absorbed by the
    // grammar's `\n` extras — the closing `"""` is recognized first
    // because the scanner short-circuits when no externals are valid.
    block_string: ($) =>
      seq(
        '"""',
        repeat(choice($.interpolation, $.block_string_content, $._embedded_quotes)),
        '"""',
      ),

    // Block-string content: runs of safe characters, escape sequences,
    // and embedded quotes followed by a non-special trailing char. The
    // patterns deliberately require a trailing non-special char on the
    // single- and double-quote forms so the lexer prefers the 3-char
    // closing `"""` literal (longest match) when three consecutive
    // quotes appear at the current position. Tree-sitter's RE2 regex
    // has no lookahead, so the trailing-char trick is how we encode
    // "not followed by a third quote" without consuming it later.
    //
    // Edge case: `""{name}` (two literal quotes immediately before an
    // interpolation) cannot match any of these patterns — `{` is
    // special and not eligible for the trailing slot. The
    // `_embedded_quotes` alternative on `block_string`'s repeat covers
    // exactly that case: two or one bare quotes with negative token
    // precedence so the closer always wins, and the `{` is left for
    // the next iteration's `interpolation` rule.
    block_string_content: (_) =>
      token.immediate(
        prec(1,
          choice(
            /[^"{\\]+/,
            /\\./,
            /"[^"{\\]/,
            /""[^"{\\]/,
          ),
        ),
      ),

    // Bare embedded quotes used only when the longer content patterns
    // and the closing `"""` literal both fail (e.g. `""` immediately
    // before `{` or `\`). Negative precedence keeps the closer
    // dominant.
    _embedded_quotes: (_) =>
      token.immediate(prec(-1, choice('""', '"'))),

    interpolation: ($) =>
      seq(
        token.immediate("{"),
        $.identifier,
        "}",
      ),

    // ── literals ───────────────────────────────────────────────────
    integer_literal: (_) => /-?[0-9]+/,
    float_literal: (_) => /-?[0-9]+\.[0-9]+/,
    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // ── comment ────────────────────────────────────────────────────
